# CoCEL_Handheld_DataRecorder

./: CMakeLists.txt  CoCEL_Handheld.desktop  CoCEL_Handheld.sh  CoCEL_Handheld2.desktop  CoCEL_Handheld_AVIA.desktop  CoCEL_Handheld_AVIA.sh  CoCEL_Handheld_AVIA_sync.desktop  CoCEL_Handheld_AVIA_sync.sh  CoCEL_Handheld_MID360.sh  README.md  package.xml
config/: cocel_config.yaml  cocel_multi_imu_config.yaml  config.yaml
include/CoCEL_Handheld_DataRecorder/: handler.h  utility.h
launch/: run_full.launch  run_multi_imu.launch  run_test.launch
scripts/: fast_lio.sh  frontend_origin.ui  frontend_upscale.ui  ui_node.py  ui_utility.py
src/: handler.cpp  main.cpp  reindexing.cpp
srv/: record_flag.srv  save_bag_path.srv
